Fix layout issues with the results (businessList.module.css)

--- a/src/Components/BusinessList/BusinessList.module.css
+++ b/src/Components/BusinessList/BusinessList.module.css
@@ -7,6 +7,12 @@
 
   /* Sizing */
   width: 100%;
-  padding: 3rem 15%;
+  padding: 3rem 1rem;
   margin: auto;
+}
+
+@media (min-width: 1300px) {
+  .businessList {
+    width: 80%;
+  }
 }
