--- a/src/Components/HeroSection/HeroSection.module.css
+++ b/src/Components/HeroSection/HeroSection.module.css
@@ -10,8 +10,6 @@
   background-position: center;
   box-shadow: 0px -8px 12px 0px rgba(0, 0, 0, 0.5);
   padding-left: 50vw;
-  padding-top: 10%;
-  padding-bottom: 10%;
 }
 
 @media (min-width: 2000px) {
